--- a/Ecommerce.Web/Ecommerce.Web.csproj
+++ b/Ecommerce.Web/Ecommerce.Web.csproj
@@ -274,6 +274,9 @@
     <Compile Include="Api\AppRoleController.cs" />
     <Compile Include="Api\AppUserController.cs" />
     <Compile Include="Api\FunctionController.cs" />
+    <Compile Include="Controllers\AboutController.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Api\PostCategoryController.cs" />
     <Compile Include="Api\ProductCategoryController.cs" />
@@ -327,6 +330,7 @@
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <None Include="Properties\PublishProfiles\Ecommerce.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -344,6 +348,11 @@
     <Content Include="Views\Shared\Header.cshtml" />
     <Content Include="Views\Shared\MobileNav.cshtml" />
     <Content Include="Views\Product\Category.cshtml" />
+    <Content Include="Views\About\Index.cshtml" />
+    <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Product\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Assets\App_LocalResources\" />
