--- a/Ecommerce.Service/Ecommerce.Service.csproj
+++ b/Ecommerce.Service/Ecommerce.Service.csproj
@@ -68,6 +68,7 @@
     <Compile Include="PostCategoryService.cs" />
     <Compile Include="PostService.cs" />
     <Compile Include="ProductCategoryService.cs" />
+    <Compile Include="ProductImageService.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatisticService.cs" />
