--- a/Ecommerce.Web/AppSettings.config
+++ b/Ecommerce.Web/AppSettings.config
@@ -6,4 +6,12 @@
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   <add key="PageSize" value="12" />
   <add key="MaxPage" value="5" />
+  <add key="SMTPHost" value="smtp.gmail.com"/>
+  <add key="SMTPPort" value="587" />
+  <add key="FromEmailAddress" value="anhdtt1995@gmail.com" />
+  <add key="FromEmailPassword" value="Nghiep2014" />
+  <add key="FromName" value="Phan Phước Nghiệp" />
+  <add key="AdminEmail" value="nghiepuit@gmail.com" />
+  <add key="CurrentLink" value="http://localhost:5000/" />
+  <add key="ReportFolder" value="/Reports"/>
 </appSettings>
