--- a/Ecommerce.Service/Ecommerce.Service.csproj
+++ b/Ecommerce.Service/Ecommerce.Service.csproj
@@ -69,6 +69,7 @@
     <Compile Include="PostService.cs" />
     <Compile Include="ProductCategoryService.cs" />
     <Compile Include="ProductImageService.cs" />
+    <Compile Include="ProductQuantityService.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatisticService.cs" />
